News UAT/force-app/main/default/objects/Case_Email_Transfer_to_Queue__c/Case_Email_Transfer_to_Queue__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of Email addresses for NVM Routing and Queue assignment</description>
    <label>Case Email Transfer to Queue</label>
</CustomObject>