News UAT/force-app/main/default/objects/Case_Email_Transfer_to_Queue__c/fields/Check_Keyword_Match__c.field-meta.xml
<CustomField>
    <fullName>Check_Keyword_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Keyword Match</label>
    <type>Checkbox</type>
</CustomField>