News UAT/force-app/main/default/objects/Case_Email_Transfer_to_Queue__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <length>3</length>
    <type>Text</type>
</CustomField>