News UAT/force-app/main/default/objects/Case_Email_Transfer_to_Queue__c/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <label>Pillar</label>
    <length>50</length>
    <type>Text</type>
</CustomField>