News UAT/force-app/main/default/objects/Case_Email_Transfer_to_Queue__c/fields/To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Email_Address__c</fullName>
    <label>To Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>