News UAT/force-app/main/default/objects/Case_Email_Transfer_to_Queue__c/fields/Transfer_to_Queue__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_Queue__c</fullName>
    <label>Transfer to Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>