News UAT/force-app/main/default/objects/Case_Email_Transfer_to_Queue__c/listViews/Transfer_to_Queue.listView-meta.xml
<ListView>
    <fullName>Transfer_to_Queue</fullName>
    <columns>NAME</columns>
    <columns>Check_Keyword_Match__c</columns>
    <columns>Pillar__c</columns>
    <columns>To_Email_Address__c</columns>
    <columns>Transfer_to_Queue__c</columns>
    <columns>Division__c</columns>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Transfer to Queue</label>
</ListView>